--- a/Churches/com.churches.by/build.gradle
+++ b/Churches/com.churches.by/build.gradle
@@ -30,7 +30,7 @@ android {
 
 apt {
     arguments {
-        androidManifestFile "manifests/AndroidManifest.xml"
+        androidManifestFile variant.outputs[0].processResources.manifestFile
         resourcePackageName android.defaultConfig.applicationId
     }
 }
