--- a/Churches/com.churches.by/src/main/AndroidManifest.xml
+++ b/Churches/com.churches.by/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+	    android:name=".CAppliation"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ChurchesMap_"
