--- a/Churches/com.churches.by/src/main/AndroidManifest.xml
+++ b/Churches/com.churches.by/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".FetchAddressIntentService"
+            android:exported="false"/>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
