--- a/Churches/com.churches.by/src/main/AndroidManifest.xml
+++ b/Churches/com.churches.by/src/main/AndroidManifest.xml
@@ -15,35 +15,33 @@
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
-    <meta-data android:name="android.app.searchable"
+    <meta-data
+        android:name="android.app.searchable"
         android:resource="@xml/searchable" />
 
     <permission
         android:name="com.churches.by.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="com.churches.by.permission.MAPS_RECEIVE"/>
+
+    <uses-permission android:name="com.churches.by.permission.MAPS_RECEIVE" />
 
     <application
+        android:name=".CAppliation"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-	    android:name=".CAppliation"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ChurchesMap_"
+            android:name=".ChurchesMap"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <service
             android:name=".FetchAddressIntentService"
-            android:exported="false"/>
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -52,6 +50,15 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".ui.NavDrawerActivity"
+            android:label="@string/title_activity_nav_drawer" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
