--- a/Churches/com.churches.by/build.gradle
+++ b/Churches/com.churches.by/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     apt "org.androidannotations:androidannotations:3.2"
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'org.androidannotations:androidannotations-api:3.2'
     compile 'com.google.android.gms:play-services:6.5.87'
 
