--- a/Churches/com.churches.by/build.gradle
+++ b/Churches/com.churches.by/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.3'
     compile 'org.androidannotations:androidannotations-api:3.2'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'io.reactivex:rxandroid:0.24.0'
 
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
     androidTestCompile 'com.squareup.spoon:spoon-client:1.1.2'
