--- a/Churches/com.churches.by/build.gradle
+++ b/Churches/com.churches.by/build.gradle
@@ -51,7 +51,11 @@ dependencies {
     compile 'org.androidannotations:androidannotations-api:3.2'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'io.reactivex:rxandroid:0.24.0'
+    compile 'de.greenrobot:eventbus:2.4.0'
 
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
     androidTestCompile 'com.squareup.spoon:spoon-client:1.1.2'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
+    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
 }
