--- a/Churches/com.churches.by/src/main/AndroidManifest.xml
+++ b/Churches/com.churches.by/src/main/AndroidManifest.xml
@@ -27,6 +27,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.details.DetailsActivity"
+                  android:label="@string/app_name"
+                  android:parentActivityName=".ui.MainActivity">
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".ui.MainActivity" />
+
+        </activity>
+
     </application>
 
 </manifest>
